# market_research_ai_app

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  requirements_simple.txt
.streamlit/: config.toml
app/: app.py
app/core/: controller.py  interfaces.py  models.py
app/core/analyzers/: regime.py
app/core/prompts/: __init__.py  ai_desk.py  market_analysis.py  rag_queries.py  ticker_analysis.py
app/core/prompts/security/: __init__.py  messages.py
app/core/prompts/tools/: __init__.py  final_response.py  query_variants.py
app/core/services/: llm_openai.py  logging_setup.py  market_data.py  pricing.py  rag_store.py  rate_limit.py  retrievers.py  security.py
app/core/tools/: market_holiday.py  market_regime.py  rag_search.py  registry.py  sector_strength.py  ticker_analysis.py  web_load.py  web_search.py  wikipedia_load.py
app/knowledge_base/configs/: approved_domains.json  regime_rules.json
app/knowledge_base/examplars/: macro_summary_examples.md  sector_writeups.md
app/knowledge_base/governance/: recency_policy.md  sourcing_rules.md
app/knowledge_base/playbooks/: macro_drivers.md  sector_explainers.md
app/knowledge_base/semistatic/: important_events_2025_2026.json  interest_rate_events_2025_2026.json  market_indicators.json  sector_representatives.json  us_market_holidays.json
app/ui/: events.py  sidebar.py  state.py  utils.py
app/ui/tabs/: about.py  ai_desk.py  market_sector_overview.py
app/ui/widgets/: charts.py  exports.py
app/var/faiss_index/: index.faiss  index.pkl
