[project]
name = "market-intelligence-companion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "audio-recorder-streamlit>=0.0.10",
    "ddgs>=9.9.2",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.12.0",
    "fredapi>=0.5.2",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "langsmith>=0.4.41",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "plotly>=6.4.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.5",
    "streamlit>=1.51.0",
    "tiktoken>=0.12.0",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.66",
]
